cargo-features = ["per-package-target"]

[package]
name = "riscv64"
version = "0.1.0"
edition = "2021"
default-target = "riscv64gc-unknown-none-elf"

[dependencies]
port = { path = "../port" }

[features]
opensbi = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(platform, values("nezha"))', 'cfg(platform, values("virt"))'] }
