cargo-features = ["per-package-target"]

[package]
name = "x86_64"
version = "0.1.0"
edition = "2024"
default-target = "x86_64-unknown-none"

[dependencies]
bitstruct = "0.1"
x86 = "0.52"
port = { path = "../port" }
seq-macro = "0.3.6"
zerocopy = { version = "0.8.27", features = ["derive"] }
bit_field = "0.10.3"
static_assertions = "1.1.0"
